--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,20 @@
 
 .body {
   width: 100%;
+  overflow-x: hidden;
+}
+
+@keyframes animateDown {
+  0%, 29%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+
+  40%{
+    transform: translateY(5px);
+  }
+
+  40% {
+    transform: translateY(3px);
+  }
+
 }
